tests/ui/macros/assert-eq-macro-msg.rs
// run-fail
// check-run-results
// ignore-emscripten no processes

fn main() {
    assert_eq!(1 + 1, 3, "1 + 1 definitely should be 3");
}
